# debris

./: README.md
SFM/: CMakeLists.txt  main.cpp
SFM/vtkSurface/: .vtkSurface.cpp.swp  CMakeLists.txt  vtkSurface.cpp  vtkSurface.h
SurfaceFromUnorganizedPoints/: CMakeLists.txt
hellocmake/: CMakeLists.txt  test.cc
hellocmake/Hello/: CMakeLists.txt  hello.cc  hello.h
hellocmake/odl/: CMakeLists.txt
vtkSurface/: CMakeLists.txt  Makefile
